Término da baby feminina desenhada

--- a/babyColorsFem.html
+++ b/babyColorsFem.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Baby Desenhada Feminina - Meias Sene</title>
+    <title>Baby Colors Masculina - Meias Sene</title>
     <link rel="stylesheet" href="baby.css">
 </head>
 
@@ -31,125 +31,59 @@
 
     <main>
         <section id="meiasBabyDesMasc">
-            <h1 class="titulo">Baby Desenhada feminina</h1>
+            <h1 class="titulo">Baby Colors Feminina </h1>
             <div class="todas-as-meias-baby-des-masc">
-                <div class="Quadrado-da-meia-rendada" id="div-meia">
-                    <div class="container" id="containerkit"> <img src="img-baby/rendadaDourada.png" alt="Meia">
+                <div class="Quadrado-da-meia-colorsFem1" id="div-meia">
+                    <div class="container"> <img src="img-baby/colors1BrancaFem.png" alt="Meia">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Rendada Feminina</h3>
+                        <h3 class="Subtitulo">Meia Baby Colors Feminina</h3>
                         <h3 class="numeracao">0 á 6 meses</h3>
-                        <div class="cores-rendada">
-                            <div class="dourada"></div>
-                            <div class="rosa"></div>
+                        <div class="cores-colorsFem1">
+                            <div class="brancaColors1"></div>
+                            <div class="rosaColors1"></div>
+                            <div class="lilasColors1"></div>
+                            <div class="verdeColors1"></div>
+                            <div class="pinkColors1"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 3,70</h3>
+                        <h3 class="preco">R$ 3,65</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-gata" id="div-meia">
-                    <div class="container" id="containerkit"> <img src="img-baby/gataRosa.png" alt="Meia">
+                <div class="Quadrado-da-meia-colorsFem" id="div-meia">
+                    <div class="container"> <img src="img-baby/colorsRosaFem.png" alt="Meia">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Gato Feminina</h3>
-                        <h3 class="numeracao">0 á 6 meses</h3>
-                        <div class="cores-gata">
-                            <div class="rosaG"></div>
-                            <div class="verdeG"></div>
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$ 3,70</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-
-                <div class="Quadrado-da-meia-lhama" id="div-meia">
-                    <div class="container" id="containerkit"> <img src="img-baby/lhamaCinza.png" alt="Meia">
-                    </div>
-                    <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Lhama Feminina</h3>
-                        <h3 class="numeracao">0 á 6 meses</h3>
-                        <div class="cores-lhama">
-                            <div class="cinzaL"></div>
-                            <div class="rosaL"></div>
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$ 3,70</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-
-                <div class="Quadrado-da-meia-chevron" id="div-meia">
-                    <div class="container" id="containerkit"> <img src="img-baby/chevronRosa.png" alt="Meia">
-                    </div>
-                    <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Chevron Feminina</h3>
+                        <h3 class="Subtitulo">Meia Baby Colors Feminina</h3>
                         <h3 class="numeracao">6 á 12 meses</h3>
-                        <div class="cores-chevron">
-                            <div class="rosaCh"></div>
-                            <div class="verdeCh"></div>
+                        <div class="cores-colorsFem">
+                            <div class="rosaColors"></div>
+                            <div class="brancaColors"></div>
+                            <div class="lilasColors"></div>
+                            <div class="verdeColors"></div>
+                            <div class="pinkColors"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 3,80</h3>
+                        <h3 class="preco">R$ 3,75</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-urso" id="div-meia">
-                    <div class="container" id="containerkit"> <img src="img-baby/ursoRosa.png" alt="Meia">
+                <div class="Quadrado-da-meia-colorsFem1-kit" id="div-meia">
+                    <div class="container"> <img src="img-baby/colorskit1Fem.png" alt="Meia">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Urso Feminina</h3>
-                        <h3 class="numeracao">6 á 12 meses</h3>
-                        <div class="cores-urso">
-                            <div class="rosaU"></div>
-                            <div class="lilasU"></div>
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$ 3,80</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-
-                <div class="Quadrado-da-meia-coracoes" id="div-meia">
-                    <div class="container" id="containerkit"> <img src="img-baby/coracoesMarinho.png" alt="Meia">
-                    </div>
-                    <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Corações Feminina</h3>
-                        <h3 class="numeracao">6 á 12 meses</h3>
-                        <div class="cores-coracoes">
-                            <div class="marinhoCoracoes"></div>
-                            <div class="rosaCoracoes"></div>
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$ 3,80</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-
-                <div class="Quadrado-da-meia-kitLhama" id="div-meia">
-                    <div class="container" id="containerkit"> <img src="img-baby/DesKit1Fem.png" alt="Meia">
-                    </div>
-                    <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada - Kit 3 pares</h3>
+                        <h3 class="Subtitulo">Meia Baby Colors Feminina - Kit 3 pares</h3>
                         <h3 class="numeracao">0 á 6 meses</h3>
-                        <div class="cores-kitLhama">
-                            <div class="kitLhama1"><p>1</p></div>
-                            <div class="kitLhama2"><p>2</p></div>
+                        <div class="cores-colorsFem1-kit">
+                            <div class="colorsKit1Fem1"><p>1</p></div>
+                            <div class="colorsKit2Fem1"><p>2</p></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
@@ -159,19 +93,19 @@
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-kitChevron" id="div-meia">
-                    <div class="container" id="containerkit"> <img src="img-baby/coracaoKit1Fem.png" alt="Meia">
+                <div class="Quadrado-da-meia-colorsFem-kit" id="div-meia">
+                    <div class="container"> <img src="img-baby/colors2kit1Fem.png" alt="Meia">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada - Kit 3 pares</h3>
+                        <h3 class="Subtitulo">Meia Baby Colors Feminina - Kit 3 pares</h3>
                         <h3 class="numeracao">6 á 12 meses</h3>
-                        <div class="cores-kitChevron">
-                            <div class="kitChevron1"><p>1</p></div>
-                            <div class="kitChevron2"><p>2</p></div>
+                        <div class="cores-colorsFem-kit">
+                            <div class="colorsKit1Fem"><p>1</p></div>
+                            <div class="colorsKit2Fem"><p>2</p></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,40</h3>
+                        <h3 class="preco">R$ 11,25</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
@@ -263,37 +197,27 @@
 
     <script>
         const imagensPorCor = {
-            'Quadrado-da-meia-rendada': {
-                dourada: 'img-baby/rendadaDourada.png',
-                rosa: 'img-baby/rendadaRosa.png'
+            'Quadrado-da-meia-colorsFem1': {
+                brancaColors1: 'img-baby/colors1BrancaFem.png',
+                rosaColors1: 'img-baby/colors1RosaFem.png',
+                lilasColors1: 'img-baby/colors1LilasFem.png',
+                verdeColors1: 'img-baby/colors1VerdeFem.png',
+                pinkColors1: 'img-baby/colors1PinkFem.png',
             },
-            'Quadrado-da-meia-gata': {
-                rosaG: 'img-baby/gataRosa.png',
-                verdeG: 'img-baby/gataVerde.png'
+            'Quadrado-da-meia-colorsFem': {
+                brancaColors: 'img-baby/colorsBrancaFem.png',
+                rosaColors: 'img-baby/colorsRosaFem.png',
+                lilasColors: 'img-baby/colorsLilasFem.png',
+                verdeColors: 'img-baby/colorsVerdeFem.png',
+                pinkColors: 'img-baby/colorsPinkFem.png',
             },
-            'Quadrado-da-meia-lhama': {
-                rosaL: 'img-baby/lhamaRosa.png',
-                cinzaL: 'img-baby/lhamaCinza.png'
+            'Quadrado-da-meia-colorsFem1-kit': {
+                colorsKit1Fem1: 'img-baby/colorskit1Fem.png',
+                colorsKit2Fem1: 'img-baby/colorskit2Fem.png',
             },
-            'Quadrado-da-meia-chevron': {
-                rosaCh: 'img-baby/chevronRosa.png',
-                verdeCh: 'img-baby/chevronVerde.png'
-            },
-            'Quadrado-da-meia-urso': {
-                rosaU: 'img-baby/ursoRosa.png',
-                lilasU: 'img-baby/ursoLilas.png'
-            },
-            'Quadrado-da-meia-coracoes': {
-                marinhoCoracoes: 'img-baby/coracoesMarinho.png',
-                rosaCoracoes: 'img-baby/coracoesRosa.png'
-            },
-            'Quadrado-da-meia-kitLhama': {
-                kitLhama1: 'img-baby/DesKit1Fem.png',
-                kitLhama2: 'img-baby/DesKit2Fem.png'
-            },
-            'Quadrado-da-meia-kitChevron': {
-                kitChevron1: 'img-baby/coracaoKit1Fem.png',
-                kitChevron2: 'img-baby/coracaoKit2Fem.png'
+            'Quadrado-da-meia-colorsFem-kit': {
+                colorsKit1Fem: 'img-baby/colors2kit1Fem.png',
+                colorsKit2Fem: 'img-baby/colors2kit2Fem.png',
             },
         };
 
@@ -302,7 +226,7 @@
             const imgMeia = quadrado.querySelector('img');
 
             // Seleciona todas as cores disponíveis para o quadrado atual
-            const cores = quadrado.querySelectorAll('.dourada, .rosa, .rosaG, .verdeG, .cinzaL, .rosaL, .rosaCh, .verdeCh, .rosaU, .lilasU, .marinhoCoracoes, .rosaCoracoes, .kitLhama1, .kitLhama2, .kitChevron1, .kitChevron2');
+            const cores = quadrado.querySelectorAll('.brancaColors1, .rosaColors1, .lilasColors1, .verdeColors1, .pinkColors1, .brancaColors, .rosaColors, .lilasColors, .verdeColors, .pinkColors, .colorsKit1Fem1, .colorsKit2Fem1, .colorsKit1Fem, .colorsKit2Fem')
 
             // Obtém o nome da classe do quadrado (primeiro nome de classe)
             const quadradoId = quadrado.className.split(' ')[0];
@@ -343,7 +267,7 @@
                 const corSelecionada = selectedColor;
 
                 if (corSelecionada) {
-                    window.location.href = `descricaoBaby/descricaoBabyDesFem.html?cor=${corSelecionada}`;
+                    window.location.href = `descricaoBaby/descricaoBabyColorsFem.html?cor=${corSelecionada}`;
                 } else {
                     alert('Por favor, selecione uma cor.');
                 }
@@ -352,10 +276,10 @@
 
         });
 
-        document.querySelectorAll('.cores-rendada div, .cores-gata div, .cores-lhama div, .cores-chevron div, .cores-urso div, .cores-coracoes div, .cores-kitLhama div, .cores-kitChevron div').forEach(cor => {
+        document.querySelectorAll('.cores-colorsFem1 div, .cores-colorsFem div, .cores-colorsFem1-kit div, .cores-colorsFem-kit div').forEach(cor => {
             cor.addEventListener('click', function () {
                 // Remove a borda de qualquer cor previamente selecionada em todos os grupos de cores
-                document.querySelectorAll('.cores-rendada div, .cores-gata div, .cores-lhama div, .cores-chevron div, .cores-urso div, .cores-coracoes div, .cores-kitLhama div, .cores-kitChevron div').forEach(c => {
+                document.querySelectorAll('.cores-colorsFem1 div, .cores-colorsFem div, .cores-colorsFem1-kit div, .cores-colorsFem-kit div').forEach(c => {
                     c.classList.remove('selected');
                 });
 
