--- a/esportivaMasc.html
+++ b/esportivaMasc.html
@@ -167,20 +167,38 @@
                     </div>
                 </div>
 
-
-                <div class="Quadrado-da-meia-kit1-6a12" id="div-meia">
-                    <div class="container"> <img src="img-baby/kit1-desenhada6a12.png" alt="Kit 3 pares de meia">
+                <div class="Quadrado-da-meia-esportiva-kit02" id="div-meia">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaPretaKit02.png" alt="Meia leão">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Kids Desenhada Masculina - Kit 3 Pares</h3>
-                        <h3 class="numeracao">6 á 12 meses</h3>
-                        <div class="cores-kit-des-0a6">
-                            <div class="kit1Des6a12">
+                        <h3 class="Subtitulo">Meia Esportiva Masculina - Kit Nº2</h3>
+                        <h3 class="numeracao">39 á 43</h3>
+                        <div class="cores-branca-preta-cinza08">
+                            <div class="pretaKit02"></div>
+                            <div class="brancaKit02"></div>
+                            <div class="cinzaKit02"></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$ 18,00</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+
+                <div class="Quadrado-da-meia-esportiva-cano-curto-kit" id="div-meia">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaCanoCurtoKit3Pares.png" alt="Kit 3 pares de meia">
+                    </div>
+                    <div class="informacoes-meia">
+                        <h3 class="Subtitulo">Meia Esportiva Cano Curto Masculina - Kit Nº1</h3>
+                        <h3 class="numeracao">39 á 43</h3>
+                        <div class="cores-branca-preta-cinza09">
+                            <div class="kitTresCores">
                                 <p>1</p>
                             </div>
-                            <div class="kit2Des6a12">
-                                <p>2</p>
-                            </div>
+                            <div class="brancaCurtoKit"></div>
+                            <div class="pretaCurtoKit"></div>
+                            <div class="cinzaCurtoKit"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
@@ -307,9 +325,16 @@
                 pretaCurto: 'img-masculino/masculinaEsportivaCanoCurtoPretaLisa.png',
                 cinzaCurto: 'img-masculino/masculinaEsportivaCanoCurtoCinzaLisa.png'
             },
-            'Quadrado-da-meia-kit1-6a12': {
-                kit1Des6a12: 'img-baby/kit1-desenhada6a12.png',
-                kit2Des6a12: 'img-baby/kit2-desenhada6a12.png'
+            'Quadrado-da-meia-esportiva-kit02': {
+                brancaKit02: 'img-masculino/masculinaEsportivaBrancaKit02.png',
+                pretaKit02: 'img-masculino/masculinaEsportivaPretaKit02.png',
+                cinzaKit02: 'img-masculino/masculinaEsportivaCinzaKit02.png'
+            },
+            'Quadrado-da-meia-esportiva-cano-curto-kit': {
+                brancaCurtoKit: 'img-masculino/masculinaEsportivaCanoCurtoBrancaKit3Pares.png',
+                pretaCurtoKit: 'img-masculino/masculinaEsportivaCanoCurtoPretaKit3Pares.png',
+                cinzaCurtoKit: 'img-masculino/masculinaEsportivaCanoCurtoCinzaKit3Pares.png',
+                kitTresCores: 'img-masculino/masculinaEsportivaCanoCurtoKit3Pares.png'
             },
         };
 
@@ -318,7 +343,7 @@
             const imgMeia = quadrado.querySelector('img');
 
             // Seleciona todas as cores disponíveis para o quadrado atual
-            const cores = quadrado.querySelectorAll('.brancaLisa, .pretaLisa, .cinzaLisa, .brancaHorse, .pretaHorse, .cinzaHorse, .brancaS, .pretaS, .cinzaS, .brancaPolo, .pretaPolo, .cinzaPolo, .brancaAreo, .pretaAero, .cinzaAero, .brancaKit01, .pretaKit01, .cinzaKit01, .brancaCurto, .pretaCurto, .cinzaCurto');
+            const cores = quadrado.querySelectorAll('.brancaLisa, .pretaLisa, .cinzaLisa, .brancaHorse, .pretaHorse, .cinzaHorse, .brancaS, .pretaS, .cinzaS, .brancaPolo, .pretaPolo, .cinzaPolo, .brancaAreo, .pretaAero, .cinzaAero, .brancaKit01, .pretaKit01, .cinzaKit01, .brancaCurto, .pretaCurto, .cinzaCurto, .brancaKit02, .pretaKit02, .cinzaKit02, .brancaCurtoKit, .pretaCurtoKit, .cinzaCurtoKit, .kitTresCores');
 
             // Obtém o nome da classe do quadrado (primeiro nome de classe)
             const quadradoId = quadrado.className.split(' ')[0];
@@ -368,10 +393,10 @@
 
         });
 
-        document.querySelectorAll('.cores-branca-preta-cinza div, .cores-branca-preta-cinza02 div, .cores-branca-preta-cinza03 div, .cores-branca-preta-cinza04 div, .cores-branca-preta-cinza05 div, .cores-branca-preta-cinza06 div, .cores-branca-preta-cinza07 div').forEach(cor => {
+        document.querySelectorAll('.cores-branca-preta-cinza div, .cores-branca-preta-cinza02 div, .cores-branca-preta-cinza03 div, .cores-branca-preta-cinza04 div, .cores-branca-preta-cinza05 div, .cores-branca-preta-cinza06 div, .cores-branca-preta-cinza07 div, .cores-branca-preta-cinza08 div, .cores-branca-preta-cinza09 div').forEach(cor => {
             cor.addEventListener('click', function () {
                 // Remove a borda de qualquer cor previamente selecionada em todos os grupos de cores
-                document.querySelectorAll('.cores-branca-preta-cinza div, .cores-branca-preta-cinza02 div, .cores-branca-preta-cinza03 div, .cores-branca-preta-cinza04 div, .cores-branca-preta-cinza05 div, .cores-branca-preta-cinza06 div, .cores-branca-preta-cinza07 div').forEach(c => {
+                document.querySelectorAll('.cores-branca-preta-cinza div, .cores-branca-preta-cinza02 div, .cores-branca-preta-cinza03 div, .cores-branca-preta-cinza04 div, .cores-branca-preta-cinza05 div, .cores-branca-preta-cinza06 div, .cores-branca-preta-cinza07 div, .cores-branca-preta-cinza08 div, .cores-branca-preta-cinza09 div').forEach(c => {
                     c.classList.remove('selected');
                 });
 
