--- a/descricaoFeminina/CanoCurtoFeminina.html
+++ b/descricaoFeminina/CanoCurtoFeminina.html
@@ -46,14 +46,14 @@
                 <div class="informacoesPrecoTamanho">
                     <h3 class="precoContainer" id="preco">gggg</h3>
                     <h3 class="numeracao"> 34 á 38</h3>
-                    <button class="btn-shopee"> Compre na </button>
+                    <button class="btn-shopee"> Compre na shopee <!-- /* <img src="../img-feminino/shopee.png" alt=""> */ --></button> 
                     <button class="btn-whatsapp"> Compre via <i class="fab fa-whatsapp"></i></button>
                 </div>
             </div>
         </div>
-        <style>
+      
 
-        </style>
+        
         <section class="DescricaoDoProduto">
             <h2 class="titulo-DescricaoProduto">DESCRIÇÃO DO PRODUTO</h2>
             <div class="linhaUm-Descricao-do-produto"></div>
