Término das meias baby

--- a/babySapFem.html
+++ b/babySapFem.html
@@ -53,6 +53,96 @@
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
+
+                <div class="Quadrado-da-meia-flor" id="div-meia">
+                    <div class="container" id="containerkit"> <img src="img-baby/florVerdeFem.png" alt="Meia">
+                    </div>
+                    <div class="informacoes-meia">
+                        <h3 class="Subtitulo">Meia Baby Flor Sapatilha Feminina</h3>
+                        <h3 class="numeracao">6 á 12 meses</h3>
+                        <div class="cores-flor">
+                            <div class="florVerde"></div>
+                            <div class="florRosa"></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$ 3,75</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+
+                <div class="Quadrado-da-meia-listras" id="div-meia">
+                    <div class="container" id="containerkit"> <img src="img-baby/listrasRosaFem.png" alt="Meia">
+                    </div>
+                    <div class="informacoes-meia">
+                        <h3 class="Subtitulo">Meia Baby Listras Sapatilha Feminina</h3>
+                        <h3 class="numeracao">6 á 12 meses</h3>
+                        <div class="cores-listras">
+                            <div class="listrasRosa"></div>
+                            <div class="listrasBranca"></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$ 3,75</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+
+                <div class="Quadrado-da-meia-elef" id="div-meia">
+                    <div class="container" id="containerkit"> <img src="img-baby/elefanteRosaFem.png" alt="Meia">
+                    </div>
+                    <div class="informacoes-meia">
+                        <h3 class="Subtitulo">Meia Baby Elefante Sapatilha Feminina</h3>
+                        <h3 class="numeracao">6 á 12 meses</h3>
+                        <div class="cores-elef">
+                            <div class="elefRosa"></div>
+                            <div class="elefVerde"></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$ 3,75</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+
+                <div class="Quadrado-da-meia-malha-kitFem" id="div-meia">
+                    <div class="container" id="containerkit"> <img src="img-baby/malhaKit1Fem.png" alt="Meia">
+                    </div>
+                    <div class="informacoes-meia">
+                        <h3 class="Subtitulo">Meia Baby Malha Persa Feminina - Kit 3 pares</h3>
+                        <h3 class="numeracao">0 á 6 meses</h3>
+                        <div class="cores-malha-kitFem">
+                            <div class="malhaKit1Fem"><p>1</p></div>
+                            <div class="malhaKit2Fem"><p>2</p></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$ 10,20</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+
+                <div class="Quadrado-da-meia-sap-kitFem" id="div-meia">
+                    <div class="container" id="containerkit"> <img src="img-baby/sapkit1Fem.png" alt="Meia">
+                    </div>
+                    <div class="informacoes-meia">
+                        <h3 class="Subtitulo">Meia Baby Sapatilha Feminina - Kit 3 pares</h3>
+                        <h3 class="numeracao">6 á 12 meses</h3>
+                        <div class="cores-sap-kitFem">
+                            <div class="sapKit1Fem"><p>1</p></div>
+                            <div class="sapKit2Fem"><p>2</p></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$ 11,25</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
@@ -145,7 +235,27 @@
                 brancaMFem: 'img-baby/malhaBrancaFem.png',
                 rosaMFem: 'img-baby/malhaRosaFem.png',
                 lilasMFem: 'img-baby/malhaLilasFem.png',
-                amarelaMFem: 'img-baby/malhaAmarelaFem.png',
+                amareloMFem: 'img-baby/malhaAmarelaFem.png',
+            },
+            'Quadrado-da-meia-flor': {
+                florVerde: 'img-baby/florVerdeFem.png',
+                florRosa: 'img-baby/florPinkFem.png',
+            },
+            'Quadrado-da-meia-listras': {
+                listrasRosa: 'img-baby/listrasRosaFem.png',
+                listrasBranca: 'img-baby/listrasBrancaFem.png',
+            },
+            'Quadrado-da-meia-elef': {
+                elefRosa: 'img-baby/elefanteRosaFem.png',
+                elefVerde: 'img-baby/elefanteVerdeFem.png',
+            },
+            'Quadrado-da-meia-malha-kitFem': {
+                malhaKit1Fem: 'img-baby/malhaKit1Fem.png',
+                malhaKit2Fem: 'img-baby/malhaKit2Fem.png'
+            },
+            'Quadrado-da-meia-sap-kitFem': {
+                sapKit1Fem: 'img-baby/sapKit1Fem.png',
+                sapKit2Fem: 'img-baby/sapKit2Fem.png'
             },
         };
 
@@ -154,7 +264,7 @@
             const imgMeia = quadrado.querySelector('img');
 
             // Seleciona todas as cores disponíveis para o quadrado atual
-            const cores = quadrado.querySelectorAll('.verdeMFem, .brancaMFem, .rosaMFem, .lilasMFem, .amarelaMFem');
+            const cores = quadrado.querySelectorAll('.verdeMFem, .brancaMFem, .rosaMFem, .lilasMFem, .amareloMFem, .florVerde, .florRosa, .listrasBranca, .listrasRosa, .elefRosa, .elefVerde, .malhaKit1Fem, .malhaKit2Fem, .sapKit1Fem, .sapKit2Fem');
 
             // Obtém o nome da classe do quadrado (primeiro nome de classe)
             const quadradoId = quadrado.className.split(' ')[0];
@@ -204,10 +314,10 @@
 
         });
 
-        document.querySelectorAll('.cores-verde-amarela-malha div').forEach(cor => {
+        document.querySelectorAll('.cores-verde-amarela-malha div, .cores-flor div, .cores-listras div, .cores-elef div, .cores-malha-kitFem div, .cores-sap-kitFem div').forEach(cor => {
             cor.addEventListener('click', function () {
                 // Remove a borda de qualquer cor previamente selecionada em todos os grupos de cores
-                document.querySelectorAll('.cores-verde-amarela-malha div').forEach(c => {
+                document.querySelectorAll('.cores-verde-amarela-malha div, .cores-flor div, .cores-listras div, .cores-elef div, .cores-malha-kitFem div, .cores-sap-kitFem div').forEach(c => {
                     c.classList.remove('selected');
                 });
 
