--- a/descricaoBaby/descricaoBabyDesMasc.html
+++ b/descricaoBaby/descricaoBabyDesMasc.html
@@ -46,7 +46,7 @@
                 <div class="informacoesPrecoTamanho">
                     <h3 class="precoContainer" id="preco"></h3>
                     <h3 class="numeracao" id="numeracao"></h3>
-                    <button class="btn-shopee"> Compre na Shopee <i class="fas fa-store"></i></button>
+                    <button class="btn-shopee"> Compre na Shopee</button>
                     <button class="btn-whatsapp"> Compre via <i class="fab fa-whatsapp"></i></button>
                 </div>
             </div>
