--- a/babyDesFem.html
+++ b/babyDesFem.html
@@ -31,7 +31,7 @@
 
     <main>
         <section id="meiasBabyDesMasc">
-            <h1 class="titulo">Baby Desenhada feminina</h1>
+            <h1 class="titulo">Baby Desenhada Feminina</h1>
             <div class="todas-as-meias-baby-des-masc">
                 <div class="Quadrado-da-meia-rendada" id="div-meia">
                     <div class="container" id="containerkit"> <img src="img-baby/rendadaDourada.png" alt="Meia">
