--- a/kidsFem.html
+++ b/kidsFem.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meias Sene</title>
+    <title>Meias Sene Kids Feminina</title>
     <link rel="stylesheet" href="kidsfem.css">
 </head>
 
@@ -31,7 +31,7 @@
     <main>
 
         <section id="meiasKidsFemino">
-            <h1 class="titulo">Kids Femino</h1>
+            <h1 class="titulo">Kids Feminino</h1>
             <h2 class="subtitulo">Kids P</h2>
             <div class="todas-as-meias-feminina-kids">
                 <!--MEIAS KIDS FEMININA P-->
