--- a/revendedor.html
+++ b/revendedor.html
@@ -29,16 +29,37 @@
         </nav>
     </header>
 </body>
-<main>
+<main id="main">
     <div class="seja-revendedor">
         <img src="img/imagem1-formulario.png" alt="Imagem formulário" class="seja-revendedor-img">
         <div class="revendedor">
-            <h1>SEJA UM</h1>
+            <h1 class="revendedor-h2">SEJA UM</h1>
             <h1 class="revendedor-h1">REVENDEDOR</h1>
             <p class="formulario">
                 Preencha o formulário e impulsione suas vendas com os produtos SENE!
             </p>
             <button class="btn-cadastro">Cadastre-se agora</button>
+        </div>
+    </div>
+
+<div class="vantagens-exclusivas">
+    <h1>Vantagens Exclusivas</h1>
+</div>
+    <div class="vantagens-exclusivas">
+        <div class="maior-rentabilidade">
+            <img src="img/mais-vantagens.png" alt="">
+            <img src="img/vantagens1.png" alt="">
+            <p>Maior Rentabilidade</p>
+        </div>
+        <div class="variedade"></div>
+        <img src="img/mais-vantagens.png" alt="">
+            <img src="img/vantagens2.png" alt="">
+            <p>Vantagens de Produtos</p>
+        </div>
+        <div class="menor-custo"></div>
+        <img src="img/mais-vantagens.png" alt="">
+            <img src="img/vantagens1.png" alt="">
+            <p>Menor custo benefício</p>
         </div>
     </div>
 </main>
