--- a/revendedor.html
+++ b/revendedor.html
@@ -42,26 +42,71 @@
         </div>
     </div>
 
-<div class="vantagens-exclusivas">
-    <h1>Vantagens Exclusivas</h1>
-</div>
+
     <div class="vantagens-exclusivas">
+        <p class="vantagens-h1">VANTAGENS <strong>EXCLUSIVAS</strong></p>
+    </div>
+    <div class="vantagens">
         <div class="maior-rentabilidade">
-            <img src="img/mais-vantagens.png" alt="">
-            <img src="img/vantagens1.png" alt="">
+            <img src="img/mais-vantagens.png" class="mais-vantagens-icon" data-target="info-box-1" alt="Mais Vantagens">
+            <img src="img/vantagens1.png" alt="Vantagens 1">
             <p>Maior Rentabilidade</p>
         </div>
-        <div class="variedade"></div>
-        <img src="img/mais-vantagens.png" alt="">
-            <img src="img/vantagens2.png" alt="">
+        <div class="variedade">
+            <img src="img/mais-vantagens.png" class="mais-vantagens-icon" data-target="info-box-2" alt="Mais Vantagens">
+            <img src="img/vantagens2.png" alt="Vantagens 2">
             <p>Vantagens de Produtos</p>
         </div>
-        <div class="menor-custo"></div>
-        <img src="img/mais-vantagens.png" alt="">
-            <img src="img/vantagens1.png" alt="">
+        <div class="menor-custo">
+            <img src="img/mais-vantagens.png" class="mais-vantagens-icon" data-target="info-box-3" alt="Mais Vantagens">
+            <img src="img/vantagens1.png" alt="Vantagens 1">
             <p>Menor custo benefício</p>
         </div>
     </div>
+
+    <!-- Caixas de texto ocultas que serão exibidas ao clicar -->
+    <div id="info-box-1" class="info-box">
+        <p>Ser revendedor de meias pode levar a menor rentabilidade devido à alta concorrência, que pressiona os preços e reduz as margens de lucro. 
+       <br> <strong>Clique fora para fechar.</strong></p>
+    </div>
+    <div id="info-box-2" class="info-box">
+        <p>As meias têm alta demanda como item essencial e oferecem variedade em estilos e tecnologias, atendendo a diferentes públicos. Essa diversidade torna-as um produto atraente e rentável para lojas. <br><strong>Clique fora para fechar.</strong> </p>
+    </div>
+    <div id="info-box-3" class="info-box">
+        <p>O menor custo de ser um revendedor em nossa loja pode ser alcançado por meio de negociações eficazes com fornecedores e da escolha de opções de estoque mais econômicas.<br><strong>Clique fora para fechar.</strong></p>
+    </div>
 </main>
+
+<!-- Script JavaScript -->
+<script>
+    // Seleciona as imagens com a classe 'mais-vantagens-icon'
+    const vantagemIcons = document.querySelectorAll('.mais-vantagens-icon');
+    const infoBoxes = document.querySelectorAll('.info-box');
+
+    // Adiciona o evento de clique para cada imagem
+    vantagemIcons.forEach(icon => {
+        icon.addEventListener('click', () => {
+            // Identifica qual caixa de texto deve ser exibida
+            const targetId = icon.getAttribute('data-target');
+            const targetBox = document.getElementById(targetId);
+
+            // Oculta todas as caixas de texto
+            infoBoxes.forEach(box => box.classList.remove('active'));
+
+            // Exibe a caixa de texto correspondente
+            targetBox.classList.add('active');
+        });
+    });
+
+    // Esconde as caixas de texto ao clicar fora delas
+    infoBoxes.forEach(box => {
+        box.addEventListener('click', (e) => {
+            // Verifica se o clique foi fora do conteúdo da caixa
+            if (e.target === box) {
+                box.classList.remove('active');
+            }
+        });
+    });
+</script>
 
 </html>
